# axenc

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
.github/workflows/: release.yml
include/: error.hpp  lexer.hpp  parser.hpp
include/nodes/: context.hpp  expression.hpp  function.hpp  statement.hpp  types.hpp
src/: lexer.cpp  main.cpp
src/codegen/: expression.cpp  function.cpp  statement.cpp  type.cpp
src/parser/: expression.cpp  function.cpp  parser.cpp  statement.cpp  type.cpp  value.cpp
tests/: helper.ax  main.ax
